--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,10 @@
 
 .policy__label {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  font-size: 1.142rem; }
+  .policy__label--center {
+    justify-content: center; }
   .policy__label::before {
     content: '';
     width: 18px;
@@ -788,6 +791,50 @@ template {
     left: 0;
     right: 0;
     margin: auto; }
+
+.footer {
+  background: url("../img/footer-bg.jpg") center no-repeat;
+  padding-top: 3rem; }
+  .footer__wrap {
+    background-color: #181818;
+    max-width: 63.07rem;
+    margin: auto;
+    padding: 2.5rem;
+    margin-bottom: 3.714rem; }
+  .footer__title {
+    text-transform: uppercase;
+    font-family: 'Yeseva One', cursive;
+    font-size: 1.428rem;
+    font-weight: normal;
+    font-style: normal;
+    text-align: center;
+    margin-bottom: 3.214rem;
+    margin-top: 0; }
+  .footer__form {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 37.142rem;
+    margin: auto;
+    justify-content: space-between; }
+  .footer__input {
+    padding-top: 0.3rem; }
+    .footer__input-group {
+      display: flex;
+      flex-direction: column;
+      flex-basis: 45%;
+      margin-bottom: 3.2rem; }
+    .footer__input--full {
+      flex-basis: 100%;
+      margin-bottom: 2rem; }
+  .footer__policy {
+    flex-basis: 100%;
+    margin-bottom: 3.6rem; }
+  .footer__button {
+    margin: auto;
+    padding: 1.285rem 4.7857rem; }
+  .footer__menu {
+    background-color: black;
+    padding: 4.2857rem; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
