--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -43,6 +43,9 @@
     &__label
         display: flex
         align-items: center
+        font-size: 1.142rem
+        &--center
+            justify-content: center
         &::before
             content: ''
             width: 18px
