--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,6 @@
 @import 'templates/modal'
 @import 'templates/projects'
 @import 'templates/href'
+@import 'templates/footer'
 @import 'settings'
 @import 'media'
